--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -28,6 +28,8 @@
     "react/jsx-props-no-spreading": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
+    "no-console": "off",
+    "no-param-reassign": "off",
     "react-hooks/exhaustive-deps": "warn",
     "react/jsx-filename-extension": [1, { "extensions": [".tsx"] }],
     "import/prefer-default-export": "off",
